--- a/Mongoose/Login_Registration/client/views/login.ejs
+++ b/Mongoose/Login_Registration/client/views/login.ejs
@@ -40,8 +40,8 @@
                         <input name="email" class="form-control" placeholder="Your Email" />
                     </div>
                     <div class="form-group">
-                        <span name="password_confirm"></span>
-                        <input name="password_confirm" class="form-control" type="password" placeholder="Confirm Password" />
+                        <span name="password"></span>
+                        <input name="password" class="form-control" type="password" placeholder="Confirm Password" />
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-default">Login!</button>
